--- a/app/views/game_requests/new.html.erb
+++ b/app/views/game_requests/new.html.erb
@@ -1,6 +1,6 @@
-<%provide(:title, 'スケジュールから対戦相手検索')%>
+<%provide(:title, '対戦相手検索')%>
 <%provide(:button_text, '登録する')%>
 <div class="form">
-	<h2>スケジュールから対戦相手検索/申し込みフォーム</h2>
+	<h2>対戦相手検索/申し込みフォーム</h2>
 	<%= render 'game_request_form' %>
 </div>
