--- a/app/views/teams/_team_profile.html.erb
+++ b/app/views/teams/_team_profile.html.erb
@@ -1,10 +1,12 @@
 <div class="team-profile">
   <% if @team.image.attached? %>
-    <%= image_tag(@team.image, size: "100x100", gravity: :center, crop: "100x100+0+0", class: "icon") %>
+    <%= image_tag(@team.image, size: "100x100", gravity: :center, crop: "100x100+0+0", class: "icon pc") %>
+    <%= image_tag(@team.image, size: "70x70", gravity: :center, crop: "70x70+0+0", class: "icon sp") %>
   <% else %>
-    <%= image_tag("default_team_image.png", size: "100x100", gravity: :center, crop: "100x100+0+0", class: "icon") %>
+    <%= image_tag("default_team_image.png", size: "100x100", gravity: :center, crop: "100x100+0+0", class: "icon pc") %>
+    <%= image_tag("default_team_image.png", size: "70x70", gravity: :center, crop: "70x70+0+0", class: "icon sp") %>
   <% end %>
-  <table class="table">
+  <table>
     <tr>
       <th>チーム名</th>
       <td><%= @team.name %></td>
