--- a/app/views/teams/_team_form.html.erb
+++ b/app/views/teams/_team_form.html.erb
@@ -1,13 +1,15 @@
 <%= form_with(model:@team,local:true) do |f| %>
   <%= f.label :image,'チームプロフィール画像' %>
-  <div class="team_image">
+  <div class="preview_image">
     <% if @team.image.attached? && @team.image.present? %>
       <%= image_tag(@team.image, id:"preview", class:"team_preview" ) %>
     <% else %>
       <%= image_tag("default_team_image.png", id:"preview", class:"team_preview" ) %>
     <% end %>
   </div>
-  <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png",id: "team_image" %>
+	<label class="file-select btn-navy">
+ 	 <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png",id: "preview_image" %>ファイルを選択
+	</label>
   <%= render 'shared/form_error_messages', object: f.object, attribute: :image %>
   <%= f.label :name,'チーム名' %>
   <%= f.text_field :name %>
