レスポンシブ対応追加再修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -668,7 +668,7 @@ input[type="file"] {
 .belonged {
 	position: absolute;
 	top: 50%;
-	left: 73%;
+	right: 8%;
 	transform: translateY(-50%);
 	display: inline-block;
 	padding: 1px 6px;
