--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@
 
 img {
 	max-width: 100%;
+	object-fit: cover;
 }
 
 .pc {
@@ -504,7 +505,7 @@ input[type="file"] {
 .file-select {
 	height: auto;
 	width: 50%;
-	margin: 0 auto 15px auto;
+	margin: 5px auto 15px auto;
 	text-align: center;
 	cursor: pointer;
 	color: #fff;
