--- a/app/views/teams/_team_form.html.erb
+++ b/app/views/teams/_team_form.html.erb
@@ -3,13 +3,27 @@
   <div class="preview_image">
     <% if @team.image.attached? && @team.image.present? %>
       <%= image_tag(@team.image, id:"preview", class:"team_preview" ) %>
+      <% if @team.id != nil %>
+        <span class="center">
+          <span class="btn btn-red">
+            <%= link_to "画像を削除", destroy_image_team_path(@team.id), method: :patch %>
+          </span>
+        </span>
+      <% end %>
     <% else %>
       <%= image_tag("default_team_image.png", id:"preview", class:"team_preview" ) %>
+      <% if @team.id != nil %>
+        <span class="center">
+          <span class="btn btn-red">
+            <%= link_to "画像を削除", destroy_image_team_path(@team.id), method: :patch%>
+          </span>
+        </span>
+      <% end %>
     <% end %>
   </div>
-	<label class="file-select btn-navy">
- 	 <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png",id: "preview_image" %>ファイルを選択
-	</label>
+  <label class="file-select btn-navy">
+    <%= f.file_field :image, accept: "image/jpg,image/gif,image/png",id: "preview_image" %>ファイルを選択
+  </label>
   <%= render 'shared/form_error_messages', object: f.object, attribute: :image %>
   <%= f.label :name,'チーム名' %>
   <%= f.text_field :name %>
