--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1038,7 +1038,7 @@ input[type="file"] {
 	.btn-event-search {
 		position: absolute;
 		top: 50%;
-		left: 86%;
+		right: 4%;
 		transform: translateY(-50%);
 		display: inline-block;
 		height: auto;
@@ -1150,7 +1150,7 @@ input[type="file"] {
 
 	// 共通
 	* {
-		font-size: 0.8rem;
+		font-size: 0.9rem;
 	}
 	.container {
 		width: 95%;
@@ -1162,6 +1162,20 @@ input[type="file"] {
 
 	.btn {
 		margin-left: 10px;
+		>a{
+			font-size: 1.0rem;
+		}
+	}
+
+	.btn-right{
+		>a{
+			font-size: 1.0rem;
+		}
+	}
+	.btn-event{
+		>a{
+			font-size: 1.0rem;
+		}
 	}
 
 	// ロゴ
@@ -1182,7 +1196,7 @@ input[type="file"] {
 
 	.dropdown {
 		li {
-			width: 90px;
+			width: 110px;
 			height: 33px;
 			line-height: 33px;
 		}
@@ -1291,35 +1305,36 @@ input[type="file"] {
 
 	// スケジュールから相手チーム検索
 	.event-search {
-		width: 305px;
+		width: 100%;
 		padding: 10px 60px 0px 5px;
 
 		label {
-			margin-top: 2px;
+			margin-top: 5px;
 		}
 		.search-input {
-			width: 160px;
+			min-width: 150px;
+			width: 63%;
 			input {
 				padding: 1px;
-				height: 19px;
+				height: 30px;
 			}
 			select {
 				padding: 3px;
-				height: 19px;
+				height: 30px;
 			}
 			.selectbox:after {
 				right: 5%;
-				top: 15%;
+				top: 22%;
 			}
 		}
 		.btn-event-search {
-			left: 84%;
-			font-size: 1rem;
+			right: 2%;
+			font-size: 1.0rem;
 		}
 	}
 
 	.instruction {
-		width: 305px;
+		width: 100%;
 	}
 
 	.detail-schedules {
