--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -822,6 +822,7 @@ input[type="file"] {
 			border: 1px solid #333;
 			text-align: center;
 			padding: 5px;
+			min-width: 42px;
 		}
 		td {
 			padding: 10px;
