スケジュール管理のメンバー名が改行されないように修正

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,7 +10,7 @@
         <th>△</th>
         <th>×</th>
         <% @members.sort_by {|members| members.user_id}.each do |member| %>
-          <th><%= User.find(member.user_id).name %></th>
+          <th nowrap><%= User.find(member.user_id).name %></th>
         <% end %>
       </tr>
       <% @events.sort_by {|events| [events.day_time]}.each do |event| %>
