ホーム画像、デフォルトのチームイメージ画像の拡張子をwebpに変更

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "ホーム")%>
 <%= render 'shared/error_messages' %>
 <div class="home-image">
-  <%= image_tag("Home_img.jpg",alt:"Baseball Image",width: "100%") %>
+  <%= image_tag("Home_img.webp",alt:"Baseball Image",width: "100%") %>
   <p><span class="title">草野球の対戦相手が<br>
       スムーズに見つかる
     </span><br>
