--- a/app/views/teams/_search_team.html.erb
+++ b/app/views/teams/_search_team.html.erb
@@ -6,8 +6,8 @@
           <%= image_tag(team.image,  size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
           <%= image_tag(team.image,  size: "38x38", gravity: :center, crop: "38x38+0+0", class: "icon sp") %>
         <% else %>
-          <%= image_tag("default_team_image.png",  size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
-					<%= image_tag("default_team_image.png",  size: "38x38", gravity: :center, crop: "38x38+0+0", class: "icon sp") %>
+          <%= image_tag("default_team_image.webp",  size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
+					<%= image_tag("default_team_image.webp",  size: "38x38", gravity: :center, crop: "38x38+0+0", class: "icon sp") %>
 				<% end %>
         <div class="team-header">
           <%= team.name %><br>
@@ -36,8 +36,8 @@
         <%= image_tag(team.image,  size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
 				<%= image_tag(team.image,  size: "38x38", gravity: :center, crop: "38x38+0+0", class: "icon sp") %>
       <% else %>
-        <%= image_tag("default_team_image.png",  size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
-				<%= image_tag("default_team_image.png",  size: "38x38", gravity: :center, crop: "38x38+0+0", class: "icon sp") %>
+        <%= image_tag("default_team_image.webp",  size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
+				<%= image_tag("default_team_image.webp",  size: "38x38", gravity: :center, crop: "38x38+0+0", class: "icon sp") %>
       <% end %>
       <div class="team-header">
         <%= team.name %><br>
