--- a/app/views/teams/_team_form.html.erb
+++ b/app/views/teams/_team_form.html.erb
@@ -11,7 +11,7 @@
         </span>
       <% end %>
     <% else %>
-      <%= image_tag("default_team_image.png", id:"preview", class:"team_preview" ) %>
+      <%= image_tag("default_team_image.webp", id:"preview", class:"team_preview" ) %>
       <% if @team.id != nil %>
         <span class="center">
           <span class="btn btn-red">
