--- a/app/views/teams/_team_profile.html.erb
+++ b/app/views/teams/_team_profile.html.erb
@@ -3,8 +3,8 @@
     <%= image_tag(@team.image, size: "100x100", gravity: :center, crop: "100x100+0+0", class: "icon pc") %>
     <%= image_tag(@team.image, size: "70x70", gravity: :center, crop: "70x70+0+0", class: "icon sp") %>
   <% else %>
-    <%= image_tag("default_team_image.png", size: "100x100", gravity: :center, crop: "100x100+0+0", class: "icon pc") %>
-    <%= image_tag("default_team_image.png", size: "70x70", gravity: :center, crop: "70x70+0+0", class: "icon sp") %>
+    <%= image_tag("default_team_image.webp", size: "100x100", gravity: :center, crop: "100x100+0+0", class: "icon pc") %>
+    <%= image_tag("default_team_image.webp", size: "70x70", gravity: :center, crop: "70x70+0+0", class: "icon sp") %>
   <% end %>
   <table>
     <tr>
