--- a/app/views/teams/list.html.erb
+++ b/app/views/teams/list.html.erb
@@ -11,8 +11,8 @@
               <%= image_tag(team_member.team.image,  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
               <%= image_tag(team_member.team.image,  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
             <% else %>
-              <%= image_tag("default_team_image.png",  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
-              <%= image_tag("default_team_image.png",  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
+              <%= image_tag("default_team_image.webp",  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
+              <%= image_tag("default_team_image.webp",  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
             <% end %>
             <%= link_to team_member.team.name, switch_team_path(team_member.team), method: :post %>
           </div>
