--- a/app/views/game_requests/show.html.erb
+++ b/app/views/game_requests/show.html.erb
@@ -14,8 +14,8 @@
           <%= image_tag(@team.image, size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
           <%= image_tag(@team.image, size: "30x30", gravity: :center, crop: "30x30+0+0", class: "icon sp") %>
         <% else %>
-          <%= image_tag("default_team_image.png", size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
-					<%= image_tag("default_team_image.png", size: "30x30", gravity: :center, crop: "30x30+0+0", class: "icon sp") %>
+          <%= image_tag("default_team_image.webp", size: "50x50", gravity: :center, crop: "50x50+0+0", class: "icon pc") %>
+					<%= image_tag("default_team_image.webp", size: "30x30", gravity: :center, crop: "30x30+0+0", class: "icon sp") %>
 				<% end %>
         <div class="team-header">
           <%= link_to @team.name, team_path(@team) %><br>
