--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,8 @@
           <%= image_tag(current_team.image, size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
           <%= image_tag(current_team.image, size: "15x15", gravity: :center, crop: "15x15+0+0", class: "icon sp") %>
         <% else %>
-          <%= image_tag("default_team_image.png", size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
-          <%= image_tag("default_team_image.png", size: "15x15", gravity: :center, crop: "15x15+0+0", class: "icon sp") %>
+          <%= image_tag("default_team_image.webp", size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
+          <%= image_tag("default_team_image.webp", size: "15x15", gravity: :center, crop: "15x15+0+0", class: "icon sp") %>
         <% end %>
         <%= link_to  current_team.name, team_path(current_team) %>
       <% end %>
