スマホ表示にてスケジュール新規登録の日時入力フォームが潰れてしまう不具合を修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1253,6 +1253,9 @@ input[type="file"] {
 			justify-content: flex-start;
 			margin-top: -15px;
 		}
+		input, textarea{
+			height: 25px;
+		}
 	}
 
 	.alert {
