--- a/app/views/event_entries/edit.html.erb
+++ b/app/views/event_entries/edit.html.erb
@@ -7,7 +7,8 @@
       </tr>
       <tr>
         <td>
-          <%= @event.day_time.strftime('%m/%d %H:%M') %>
+          <%= @event.day_time.strftime('%m/%d') %>(<%= %w(日 月 火 水 木 金 土)[@event.day_time.wday] %>)
+          <%= @event.day_time.strftime('%H:%M') %>
           <%= @event.ground %>
           <% if @event.opponent_team_name.present? %>
             VS<%= @event.opponent_team_name %>
