--- a/app/views/teams/list.html.erb
+++ b/app/views/teams/list.html.erb
@@ -6,16 +6,18 @@
     <div class="team-change">
       <span>
         <% @team_members.each do |team_member| %>
-          <div class="list">
-            <% if team_member.team.image.attached? %>
-              <%= image_tag(team_member.team.image,  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
-              <%= image_tag(team_member.team.image,  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
-            <% else %>
-              <%= image_tag("default_team_image.webp",  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
-              <%= image_tag("default_team_image.webp",  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
-            <% end %>
-            <%= link_to team_member.team.name, switch_team_path(team_member.team), method: :post %>
-          </div>
+          <%= link_to (switch_team_path(team_member.team)), method: :post do %>
+            <div class="list">
+              <% if team_member.team.image.attached? %>
+                <%= image_tag(team_member.team.image,  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
+                <%= image_tag(team_member.team.image,  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
+              <% else %>
+                <%= image_tag("default_team_image.webp",  size: "25x25", gravity: :center, crop: "25x25+0+0", class: "icon pc") %>
+                <%= image_tag("default_team_image.webp",  size: "20x20", gravity: :center, crop: "20x20+0+0", class: "icon sp") %>
+              <% end %>
+              <%= team_member.team.name %>
+            </div>
+          <% end %>
         <% end %>
       </span>
     </div>
