--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -398,6 +398,11 @@ table{
 	cursor: pointer;
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
 	@include box_sizing;
+	&:active{
+		box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+		position: relative;
+		top: 2px;
+	}
 }
 
 input.form-btn {
