--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1077,6 +1077,12 @@ input[type="file"] {
 	border-radius: 5px;
 	cursor: pointer;
 	@include box_sizing;
+	box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
+	&:active{
+		box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+		position: relative;
+		top: 2px;
+	}
 }
 
 // スケジュールから相手チーム検索
