チーム管理者のみ他のチームメンバーのイベント出欠を編集できる機能を追加

--- a/app/views/event_entries/edit.html.erb
+++ b/app/views/event_entries/edit.html.erb
@@ -3,7 +3,7 @@
     <table>
       <tr>
         <th></th>
-        <th><%= current_user.name %> </th>
+        <th><%= User.find(@event_entry.user_id).name %> </th>
       </tr>
       <tr>
         <td>
