スケジュール管理のチームメンバーの表示名変更機能の実装（テストは未実装）

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -912,6 +912,11 @@ input[type="file"] {
 			padding: 5px;
 			min-width: 47px;
 		}
+		th {
+				a {
+				text-decoration: underline;
+			}
+		}
 		td {
 			padding: 10px;
 			position: relative;
