--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -851,99 +851,104 @@ input[type="file"] {
 
 // スケジュール管理ページ
 
-.events {
-	overflow-x: auto !important;
-	width: 100%;
-	table {
-		border-collapse: collapse;
-		table-layout: fixed;
-		tr:nth-child(even) {
-			background-color: #efefef;
-			.fixed {
-				min-width: 700px;
-				overflow-wrap: break-word;
-				font-weight: normal;
-				text-align: left;
-				position: sticky;
-				left: 0;
-				z-index: 1;
+.event-area{
+	width: 89vw;
+	.events {
+		overflow-x: auto;
+		table {
+			border-collapse: collapse;
+			table-layout: fixed;
+			tr:nth-child(even) {
 				background-color: #efefef;
-				&:before {
-					pointer-events: none;
-					content: "";
-					position: absolute;
-					top: -1px;
-					left: -1px;
-					width: 100%;
-					height: 100%;
-					border: 1px solid;
-					box-sizing: content-box;
+				.fixed {
+					min-width: 700px;
+					overflow-wrap: break-word;
+					font-weight: normal;
+					text-align: left;
+					position: sticky;
+					left: 0;
+					z-index: 1;
+					background-color: #efefef;
+					&:before {
+						pointer-events: none;
+						content: "";
+						position: absolute;
+						top: -1px;
+						left: -1px;
+						width: 100%;
+						height: 100%;
+						border: 1px solid;
+						box-sizing: content-box;
+					}
 				}
 			}
-		}
-		tr:nth-child(odd) {
-			background-color: white;
-			.fixed {
-				min-width: 700px;
-				overflow-wrap: break-word;
-				font-weight: normal;
-				text-align: left;
-				position: sticky;
-				left: 0;
-				z-index: 1;
+			tr:nth-child(odd) {
 				background-color: white;
-				&:before {
-					pointer-events: none;
-					content: "";
-					position: absolute;
-					top: -1px;
-					left: -1px;
-					width: 100%;
-					height: 100%;
-					border: 1px solid;
-					box-sizing: content-box;
+				.fixed {
+					min-width: 700px;
+					overflow-wrap: break-word;
+					font-weight: normal;
+					text-align: left;
+					position: sticky;
+					left: 0;
+					z-index: 1;
+					background-color: white;
+					&:before {
+						pointer-events: none;
+						content: "";
+						position: absolute;
+						top: -1px;
+						left: -1px;
+						width: 100%;
+						height: 100%;
+						border: 1px solid;
+						box-sizing: content-box;
+					}
+				}
+			}
+			th,
+			td {
+				border: 1px solid;
+				text-align: center;
+				padding: 5px;
+				min-width: 47px;
+			}
+			th {
+				a {
+					text-decoration: underline;
+				}
+			}
+			td {
+				padding: 10px;
+				position: relative;
+			}
+			.btn {
+				margin-left: 0px;
+			}
+			.beside {
+				display: inline-block;
+				a{
+					text-decoration: none;
 				}
 			}
 		}
-		th,
-		td {
-			border: 1px solid;
-			text-align: center;
-			padding: 5px;
-			min-width: 47px;
-		}
-		th {
-				a {
-				text-decoration: underline;
+		
+		.entry {
+			a {
+				position: absolute;
+				display: block;
+				top: 50%;
+				left: 50%;
+				transform: translateY(-50%) translateX(-50%);
+				color: blue;
 			}
-		}
-		td {
-			padding: 10px;
-			position: relative;
-		}
-		.btn {
-			margin-left: 0px;
-		}
-		.beside {
-			display: inline-block;
-		}
-	}
-
-	.entry {
-		a {
-			position: absolute;
-			display: block;
-			top: 50%;
-			left: 50%;
-			transform: translateY(-50%) translateX(-50%);
-			color: blue;
-		}
-		p {
-			position: absolute;
-			display: block;
-			top: 50%;
-			left: 50%;
-			transform: translateY(-50%) translateX(-50%);
+			p {
+				position: absolute;
+				display: block;
+				top: 50%;
+				left: 50%;
+				transform: translateY(-50%) translateX(-50%);
+			}
 		}
 	}
 }
@@ -1222,6 +1227,9 @@ input[type="file"] {
 
 @media screen and (max-width: 1024px) {
 	// タブレット用
+	.container {
+		width: 95%;
+	}
 	// タブ
 	.tab-area {
 		.tab-buttons {
@@ -1240,16 +1248,19 @@ input[type="file"] {
 	}
 	
 	// スケジュール
-	.events {
-		table {
-			tr:nth-child(even) {
-				.fixed {
-					min-width: 300px;
+	.event-area{
+		width: 97vw;
+		.events {
+			table {
+				tr:nth-child(even) {
+					.fixed {
+						min-width: 300px;
+					}
 				}
-			}
-			tr:nth-child(odd) {
-				.fixed {
-					min-width: 300px;
+				tr:nth-child(odd) {
+					.fixed {
+						min-width: 300px;
+					}
 				}
 			}
 		}
@@ -1262,9 +1273,6 @@ input[type="file"] {
 	// 共通
 	* {
 		font-size: 0.9rem;
-	}
-	.container {
-		width: 95%;
 	}
 
 	h2 {
@@ -1402,27 +1410,35 @@ input[type="file"] {
 	}
 
 	// スケジュール
-	.events {
-		table {
-			tr:nth-child(even) {
-				.fixed {
-					min-width: 180px;
-					font-size: 0.8rem;
+	.event-area{
+		.events {
+			table {
+				tr:nth-child(even) {
+					.fixed {
+						min-width: 180px;
+						font-size: 0.8rem;
+						a{
+							font-size: 0.8rem;
+						}
+					}
+				}
+				tr:nth-child(odd) {
+					.fixed {
+						min-width: 180px;
+						font-size: 0.8rem;
+						a{
+							font-size: 0.8rem;
+						}
+					}
 				}
 			}
-			tr:nth-child(odd) {
-				.fixed {
-					min-width: 180px;
-					font-size: 0.8rem;
-				}
+			th,
+			td {
+				min-width: 42px;
 			}
-		}
-		th,
-		td {
-			min-width: 42px;
 		}
 	}
-
+		
 	// スケジュールから相手チーム検索
 	.event-search {
 		width: 100%;
