--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -756,7 +756,6 @@ input[type="file"] {
 	transform: translateY(-50%);
 	display: inline-block;
 	padding: 1px 6px;
-	font-size: 15px;
 	font-weight: bold;
 }
 
@@ -852,7 +851,8 @@ input[type="file"] {
 // スケジュール管理ページ
 
 .event-area{
-	width: 89vw;
+	width: 90vw;
+	margin: 0 calc(50% - 45vw);
 	.events {
 		overflow-x: auto;
 		table {
@@ -1250,6 +1250,7 @@ input[type="file"] {
 	// スケジュール
 	.event-area{
 		width: 97vw;
+		margin: 0;
 		.events {
 			table {
 				tr:nth-child(even) {
@@ -1519,10 +1520,6 @@ input[type="file"] {
 		> a {
 			color: blue;
 		}
-	}
-
-	.belonged {
-		font-size: 0.75rem;
 	}
 
 	.btn-search {
