--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <li class="nav">
     <%= link_to "おたスケ", root_path, id:"logo" %>
-    <% if current_user && current_user.admin?  %>
+    <% if current_user&.admin?  %>
       <%= link_to "ユーザー一覧", users_path %>
     <% end %>
   </div>
@@ -37,6 +37,7 @@
           <li><%= link_to "所属チーム検索", teams_path %></li>
           <li><%= link_to "チーム作成", new_team_path %></li>
           <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
+          <li><%= link_to "アカウントを消す", user_path(current_user), method: :delete, data: {confirm: "アカウントを削除しますか？"} %></li> 
         </ul>
       </li>
     <% else %>
