ユーザーのアカウント削除機能の実装

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,3 +4,8 @@
   <h2>プロフィール編集</h2>
   <%= render 'form' %>
 </div>
+<span class="center">
+	<span class="btn btn-red">
+		<%= link_to "アカウント削除", user_path(current_user), method: :delete, data: {confirm: "アカウントを削除しますか？"} %>
+	</span> 
+</span>
