--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -345,7 +345,7 @@ table{
 
 .form {
 	width: 400px;
-	margin: 0 auto;
+	margin: 0 auto 10px auto;
 	border: 1px solid;
 	padding: 20px;
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
